--- a/templates/index.html
+++ b/templates/index.html
@@ -7,10 +7,91 @@
     <title>Clinica de Especialidades</title>
 </head>
 <body>
-    <h1>Inicio Clinica</h1>
-    <a href="Especialidades.html">Especialidades</a>
-    <a href="Servicios.html">Servicios</a>
-    <a href="QuienesSomos.html">¿Quienes Somos?</a>
-    <a href="Contactanos.html">Contactanos</a>
+    <div class="login-box">
+
+                <b>CLINICA </b> DE ESPECIALIDADES
+            </a>
+        </div>
+
+        
+        <div class="card card-outline card-primary">
+
+            
+                            <div class="card-header ">
+                    <h3 class="card-title float-none text-center">
+                        Autenticarse para iniciar sesión                    </h3>
+                </div>
+            
+            
+            <div class="card-body login-card-body ">
+                    <form action="" method="post">
+        
+        
+        <div class="input-group mb-3">
+            <input type="email" name="email" class="form-control " value="" placeholder="Email" autofocus="">
+
+            <div class="input-group-append">
+                <div class="input-group-text">
+                    <span class="fas fa-envelope "></span>
+                </div>
+            </div>
+
+                    </div>
+
+        
+        <div class="input-group mb-3">
+            <input type="password" name="password" class="form-control " placeholder="Contraseña">
+
+            <div class="input-group-append">
+                <div class="input-group-text">
+                    <span class="fas fa-lock "></span>
+                </div>
+            </div>
+
+                    </div>
+
+        
+        <div class="row">
+            <div class="col-7">
+                <div class="icheck-primary" title="Mantenerme autenticado indefinidamente o hasta cerrar la sesión manualmente">
+                    <input type="checkbox" name="remember" id="remember">
+
+                    <label for="remember">
+                        Recordarme
+                    </label>
+                </div>
+            </div>
+
+            <div class="col-5">
+                <button type="submit" class="btn btn-block btn-flat btn-primary">
+                    <span class="fas fa-sign-in-alt"></span>
+                    Acceder
+                </button>
+            </div>
+        </div>
+
+    </form>
+            </div>
+
+            
+                            <div class="card-footer ">
+                        
+            <p class="my-0">
+            <a href="">
+                Olvidé mi contraseña
+            </a>
+        </p>
+    
+    
+            <p class="my-0">
+            <a href="">
+                Crear una nueva cuenta
+            </a>
+        </p>
+                    </div>
+            
+        </div>
+
+    </div>
 </body>
 </html>
