--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <title>Clinica de Especialidades</title>
 </head>
 <body>
-    <div class="login-box">
+    <div class="login-box" alt=>
 
                 <b>CLINICA </b> DE ESPECIALIDADES
             </a>
