--- a/templates/index.html
+++ b/templates/index.html
@@ -5,16 +5,56 @@
         body {
             background-color: lightblue;
           }
+          ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            background-color: #255;
+          }
+          
+          li {
+            float: left;
+          }
+          
+          li a {
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+          }
+          
+          li a:hover {
+            background-color: #111;
+          }
+          div.card {
+            position: absolute;
+            top: 50%;
+            width: 100%;
+            text-align: center;
+            font-size: 18px;
+          }
+          footer{
+            position: absolute;
+            bottom: 8px;
+            left: 16px;
+            font-size: 18px;
+          }
     </style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clinica de Especialidades</title>
+    <title>Hola Taller</title>
 </head>
 <body>
-    <div class="login-box" alt=>
-                <b>CLINICA </b> DE ESPECIALIDADES
-            </a>
+    <ul>
+        <li><a href="#index">Sysweb</a></li>
+      </ul>
+    <div class="card">
+        <div class="login-box" alt=>
+            <b>CLINICA </b> DE ESPECIALIDADES
+        </a>
         </div>
         <div class="card card-outline card-primary">
                             <div class="card-header ">
@@ -55,7 +95,7 @@
                 </button>
             </div>
         </div>
-    </form>
+        </form>
             </div>
                             <div class="card-footer ">
             <p class="my-0">
@@ -69,6 +109,7 @@
             </a>
         </p>
                     </div>
+        </div>
         </div>
     </div>
     <footer>
