--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <style>
         body {
-            background-color: lightblue;
+            background-color: #b4b4b4;
           }
           ul {
             list-style-type: none;
