--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <style>
         body {
-            background-color: #b4b4b4;
+            background-image: url("static/bk.png");
           }
           ul {
             list-style-type: none;
@@ -29,17 +29,26 @@
             background-color: #111;
           }
           div.card {
+            border-style:solid;
             position: absolute;
-            top: 50%;
-            width: 100%;
+            top: 20%;
+            left: 35%;
             text-align: center;
             font-size: 18px;
+            width: 300px;
+            padding: 25px;
+            background-color: #f9f9f9;
           }
+         
           footer{
             position: absolute;
-            bottom: 8px;
+            bottom: 18px;
             left: 16px;
             font-size: 18px;
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            background-color: #255;
           }
     </style>
     <meta charset="UTF-8">
@@ -52,25 +61,21 @@
         <li><a href="#index">Sysweb</a></li>
       </ul>
     <div class="card">
-        <div class="login-box" alt=>
-            <b>CLINICA </b> DE ESPECIALIDADES
-        </a>
+        <div class="card-header ">
+            <h3 class="card-title float-none text-center">
+                Autenticarse para iniciar sesión                    </h3>
         </div>
-        <div class="card card-outline card-primary">
-                            <div class="card-header ">
-                    <h3 class="card-title float-none text-center">
-                        Autenticarse para iniciar sesión                    </h3>
-                </div>
-            <div class="card-body login-card-body ">
-                    <form action="" method="post">
-        <div class="input-group mb-3">
-            <input type="email" name="email" class="form-control " value="" placeholder="Email" autofocus="">
-            <div class="input-group-append">
-                <div class="input-group-text">
-                    <span class="fas fa-envelope "></span>
+        <div class="card-body login-card-body ">
+            <form action="" method="post">
+            <div class="input-group mb-3">
+                <input type="email" name="email" class="form-control " value="" placeholder="Email" autofocus="">
+                <div class="input-group-append">
+                    <div class="input-group-text">
+                        <span class="fas fa-envelope "></span>
+                    </div>
                 </div>
             </div>
-                    </div>
+        </div>
         <div class="input-group mb-3">
             <input type="password" name="password" class="form-control " placeholder="Contraseña">
             <div class="input-group-append">
@@ -78,7 +83,7 @@
                     <span class="fas fa-lock "></span>
                 </div>
             </div>
-                    </div>
+        </div>
         <div class="row">
             <div class="col-7">
                 <div class="icheck-primary" title="Mantenerme autenticado indefinidamente o hasta cerrar la sesión manualmente">
@@ -96,20 +101,18 @@
             </div>
         </div>
         </form>
-            </div>
-                            <div class="card-footer ">
-            <p class="my-0">
-            <a href="">
-                Olvidé mi contraseña
-            </a>
-        </p>
-            <p class="my-0">
-            <a href="">
+            <div class="card-footer ">
+                <p class="my-0">
+                <a href="">
+                    Olvidé mi contraseña
+                </a>
+                </p>
+                <p class="my-0">
+                <a href="">
                 Crear una nueva cuenta
-            </a>
-        </p>
-                    </div>
-        </div>
+                </a>
+                </p>
+            </div>
         </div>
     </div>
     <footer>
