--- a/templates/index.html
+++ b/templates/index.html
@@ -1,122 +1,2 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <style>
-        body {
-            background-image: url("static/bk.png");
-          }
-          ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
-            background-color: #255;
-          }
-          
-          li {
-            float: left;
-          }
-          
-          li a {
-            display: block;
-            color: white;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-          }
-          
-          li a:hover {
-            background-color: #111;
-          }
-          div.card {
-            border-style:solid;
-            position: absolute;
-            top: 20%;
-            left: 35%;
-            text-align: center;
-            font-size: 18px;
-            width: 300px;
-            padding: 25px;
-            background-color: #f9f9f9;
-          }
-         
-          footer{
-            position: absolute;
-            bottom: 18px;
-            left: 16px;
-            font-size: 18px;
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-            background-color: #255;
-          }
-    </style>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hola Taller</title>
-</head>
-<body>
-    <ul>
-        <li><a href="#index">Sysweb</a></li>
-      </ul>
-    <div class="card">
-        <div class="card-header ">
-            <h3 class="card-title float-none text-center">
-                Autenticarse para iniciar sesión                    </h3>
-        </div>
-        <div class="card-body login-card-body ">
-            <form action="" method="post">
-            <div class="input-group mb-3">
-                <input type="email" name="email" class="form-control " value="" placeholder="Email" autofocus="">
-                <div class="input-group-append">
-                    <div class="input-group-text">
-                        <span class="fas fa-envelope "></span>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="input-group mb-3">
-            <input type="password" name="password" class="form-control " placeholder="Contraseña">
-            <div class="input-group-append">
-                <div class="input-group-text">
-                    <span class="fas fa-lock "></span>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-7">
-                <div class="icheck-primary" title="Mantenerme autenticado indefinidamente o hasta cerrar la sesión manualmente">
-                    <input type="checkbox" name="remember" id="remember">
-                    <label for="remember">
-                        Recordarme
-                    </label>
-                </div>
-            </div>
-            <div class="col-5">
-                <button type="submit" class="btn btn-block btn-flat btn-primary">
-                    <span class="fas fa-sign-in-alt"></span>
-                    Acceder
-                </button>
-            </div>
-        </div>
-        </form>
-            <div class="card-footer ">
-                <p class="my-0">
-                <a href="">
-                    Olvidé mi contraseña
-                </a>
-                </p>
-                <p class="my-0">
-                <a href="">
-                Crear una nueva cuenta
-                </a>
-                </p>
-            </div>
-        </div>
-    </div>
-    <footer>
-        Copyright 2023 Miguel Angel Perez Diaz 6"M" LIDTS - Taller de Desarrollo 4
-    </footer>
-</body>
-</html>
+indice
+
