--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="static/css/auth.css">
+    <link rel="stylesheet" type="text/css" href="static/css/default.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +10,7 @@
 </head>
 <body>
     <ul>
-        <li><a href="#index">Clinica de Especialidades Lekanawat</a></li>
+        <li><a href="/index.html">Clinica de Especialidades Lekanawat</a></li>
     </ul>
     <div class="card">
         <div class="card-header ">
