--- a/templates/escritorio.html
+++ b/templates/escritorio.html
@@ -15,7 +15,7 @@
 
 <body>
     <ul>
-        <li><a href="/index.html">Clinica de Especialidades Lekay'on</a></li>
+        <li><a href="">Clinica de Especialidades Lekay'on</a></li>
     </ul>
     <section class="section">
         <div class="columns">
@@ -26,7 +26,9 @@
             </div>
         </div>
     </section>
-
+    <li>
+        <h1>Copyright 2023 Miguel Angel Perez Diaz 6"M" LIDTS - Taller de Desarrollo 4</h1>    
+    </li>  
 </body>
 
 </html>
