--- a/templates/login.html
+++ b/templates/login.html
@@ -15,7 +15,7 @@
 
 <body>
     <ul>
-        <li><a href="/">Clinica de Especialidades Lekay'on</a></li>
+        <li><a href="">Clinica de Especialidades Lekay'on</a></li>
     </ul>
 
     <div class="card">
